--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,90 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap");
+
+.bulb {
+  max-width: 900px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+}
+
+.fa.fa-lightbulb-o {
+  font-size: 4rem;
+}
+
+.four-wayRoom {
+  /* border: 1px solid black; */
+  /* box-shadow: -3px -2px 10px orange; */
+  width: 400px;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+  flex-wrap: wrap;
+}
+
+.four-wayRoom span i.fa {
+  font-size: 205px;
+  margin-right: 109px;
+  padding-top: 10px;
+  color: hsl(0, 0%, 100%);
+  margin-left: 6.6rem;
+}
+
+.lightDisplay button {
+  border: none;
+  padding: 1rem;
+  border-radius: 20px;
+  outline: none;
+  font-family: "Raleway", sans-serif;
+  width: 200px;
+  font-weight: 700;
+  background: rgb(141, 136, 126);
+  color: #333;
+  cursor: pointer;
+  background: grey;
+}
+
+.lightDisplay button:active {
+  outline: none;
+}
+
+.lightDisplay button:disabled {
+  cursor: not-allowed;
+}
+.lightDisplay {
+  margin-left: 2rem;
+  margin-bottom: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.lightDisplay button.toggleSwitch {
+  color: #fff;
+}
+
+.feedback {
+  font-size: 2.5rem;
+  width: 100%;
+  margin-left: 0.9rem;
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
+}
+p.feedback span {
+  margin-left: 0.5rem;
+  width: 200px;
+  text-align: center;
+  font-weight: inherit;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+.App h3 {
+  margin-top: 0.9rem;
+  /* font-size: 1rem; */
+  margin-bottom: 1.1rem;
+  font-family: "Raleway", sans-serif;
 }
